# Finagent_v1

./: .gitignore  README.md  langgraph_fin_sections_with_llm_20250810_180053.ipynb  langgraph_fin_sections_with_llm_fixed_20250811.ipynb  main.ipynb  main.py  requirements.txt  story_rag_langgraph.ipynb
modules/dataloader/: .gitignore  README.md  pyproject.toml  requirements.txt
modules/dataloader/docker/: Dockerfile
modules/dataloader/financial_statements/: __init__.py  main.py
modules/dataloader/financial_statements/parser/sec_api/: balance_sheet.py  cash_flow.py  financial_statement_parser.py  income_statement.py  income_statement_with_segment.py  parser_utils.py
modules/dataloader/financial_statements/retriever/: __init__.py  financial_statements_retriever.py  income_statement.py  income_statement_with_segment.py
modules/dataloader/offline_data/tsla/arelle_xbrl/: TSLA_BS.csv  TSLA_CF.csv  TSLA_IS.csv  TSLA_SE.csv  tsla-20250630_cal.xml  tsla-20250630_def.xml  tsla-20250630_htm.xml  tsla-20250630_lab.xml  tsla-20250630_pre.xml
modules/dataloader/offline_data/tsla/sec_api/: tsla_20240930_BS.csv  tsla_20240930_CF.csv  tsla_20240930_IS.csv  tsla_20240930_financial_statements.json  tsla_20250331_BS.csv  tsla_20250331_CF.csv  tsla_20250331_IS.csv  tsla_20250331_financial_statements.json  tsla_20250630_BS.csv  tsla_20250630_CF.csv  (+4 more)
modules/dataloader/sec/: __init__.py  constants.py  sec_client.py  sec_service.py
modules/dataloader/tests/: test_main.py
modules/dataloader/tests/data_loader/: conftest.py  test_integration_tsla.py  test_service_period_infer.py
(+27 files in other folders)
